# squirrel

./: .gitignore  .travis.yml  .travis_build.sh  CMakeLists.txt  COMPILE  COPYRIGHT  HISTORY  Makefile  README  README.md  appveyor.yml  build.bat  build.sh  configure.bat  configure.sh  squirrel.pc.in  testRunner.py
doc/: make.bat  requirements.txt  sqstdlib3.chm  squirrel3.chm
doc/repl/: CMakeLists.txt  index.html  index.js  native.cpp  sqjsrepl.js  sqjsrepl.wasm  style.css
doc/source/: conf.py  index.rst  quirrel.py
doc/source/modules/: index.rst
doc/source/reference/: diff_from_original.rst  embedding_squirrel.rst  index.rst  introduction.rst  language.rst
doc/source/stdlib/: index.rst  stdauxlib.rst  stdbloblib.rst  stddatetimelib.rst  stdimportlib.rst  stdiolib.rst  stdstringlib.rst  stdsystemlib.rst
etc/: minimal.c  test.nut
helpers/: keyValueFile.h
helpers/importParser/: importParser.h
helpers/importParser/tests/: run_tests.bat
include/: sqastio.h  sqconfig.h  sqdirect.h  sqinclude.h  sqstdaux.h  sqstdblob.h  sqstdimport.h  sqstdio.h  sqstdmodule.h  sqstdstream.h  sqstdstreamreader.h  sqstdsystem.h  sqstdtextio.h  squirrel.h
samples/: ackermann.nut  array.nut  class.nut  classattributes.nut  coroutines.nut  delegation.nut  fibonacci.nut  flow.nut  generators.nut  hello.nut  list.nut  loops.nut  matrix.nut  metamethods.nut  methcall.nut  module_1.nut  module_demo.nut  regex.nut  tailstate.nut
scripts/samples/: ackermann.nut  array.nut  class.nut  coroutines.nut  delegation.nut  fibonacci.nut  flow.nut  generators.nut  list.nut  loops.nut  matrix.nut  metamethods.nut  methcall.nut  module_1.nut  module_2.nut  module_demo.nut  regex.nut  tailstate.nut
scripts/std/: functools.nut
sq/: CMakeLists.txt  Makefile  sq.c  sq.cpp  sq.dsp
sqmodules/: CMakeLists.txt  path.cpp  sqmodules.cpp  sqmodules.h
sqstdlib/: CMakeLists.txt  Makefile  sqstdaux.cpp  sqstdblob.cpp  sqstdblobimpl.h  sqstddatetime.cpp  sqstdimport.cpp  sqstdio.cpp  sqstdlib.dsp  sqstdmath.cpp  sqstdrex.cpp  sqstdsquirrelio.cpp  sqstdstream.cpp  sqstdstream.h  sqstdstreamreader.cpp  sqstdstring.cpp  sqstdsystem.cpp  sqstdtextio.cpp
sqtestdoc/: CMakeLists.txt  build_documentation.c  reference_embedding.c  reference_embedding.cpp
squirrel/: CMakeLists.txt  Makefile  arena.h  sqapi.cpp  sqarray.h  sqast.cpp  sqast.h  sqast_tree_dump.h  sqastcodegen.cpp  sqastcodegen.h  sqastparser.cpp  sqastparser.h  sqastrender.h  sqbaselib.cpp  sqbinaryast.cpp  sqbinaryast.h  sqclass.cpp  sqclass.h  sqclosure.h  sqcompilationcontext.cpp  sqcompilationcontext.cpp.bak  sqcompilationcontext.h  sqcompilationcontext.h.bak  sqcompiler.cpp  sqcompiler.h  sqdebug.cpp  sqdirect.cpp  sqfuncproto.h  sqfuncstate.cpp  sqfuncstate.h  sqlexer.cpp  sqlexer.h  sqmem.cpp  sqobject.cpp  sqobject.h  sqopcodes.h  sqoptimizer.cpp  sqpcheader.h  sqstate.cpp  sqstate.h  (+9 more)
squirrel/optimizations/: closureHoisting.cpp  closureHoisting.h
squirrel/static_analyser/: analyser.cpp  analyser.h
static_analyzer/: compilation_context.cpp  compilation_context.h  dump_sorted_module.nut  dump_sorted_module.nut.inl  json_output.cpp  json_output.h  module_exports.cpp  module_exports.h  quirrel_lexer.cpp  quirrel_lexer.h  quirrel_parser.cpp  quirrel_parser.h  quirrel_static_analyzer.cpp
static_analyzer/tests/: .sqconfig  run_tests.bat  run_tests.sh
static_analyzer/tests/2pass/: 1.nut.2pass  2.nut.2pass
static_analyzer/tests/expected_compiler_error/: inexpr_2.txt  inexpr_3.txt  inexpr_4.txt  nonscalar_const.txt
static_analyzer/tests/expected_fail/: w190.nut  w192.nut  w202.nut  w210_def.nut  w212.nut  w214.nut  w218.nut  w221.nut  w222_deep.nut  w223.nut  w227.nut  w230.nut  w231.nut  w231_sqconfig.nut  w232_not.nut  w233_deep.nut  w237.nut  w238_heuristic.nut  w242.nut  w242_key_value.nut  w244.nut  w247_deep.nut  w247_sqconfig.nut  w248.nut  w252.nut  w255.nut  w255_local_class.nut  w256.nut  w257.nut  w258.nut  w258_local_class.nut  w259.nut  w260_local_function.nut  w260_table.nut  w260_table_sqconfig.nut  w261.nut  w262.nut  w263.nut  w264_sqconfig.nut  w267.nut  (+20 more)
testData/diagnostics/: 1000_local_variables.diag.txt  50k_access_member.diag.txt  50k_curly_brackets.diag.txt  50k_function_calls.diag.txt  50k_lambdas.diag.txt  50k_nested_tables.diag.txt  50k_not.diag.txt  50k_paren_brackets.diag.txt  50k_square_brackets.diag.txt  50r_binop.diag.txt  assign_and_crash.diag.txt  assign_to_expr.diag.txt  assign_to_expr2.diag.txt  assign_to_optional_7.diag.txt  base_as_array_assign.diag.txt  base_as_array_pp.diag.txt  base_pp.diag.txt  base_x_pp.diag.txt  binding_assign.diag.txt  const_scope_1.diag.txt  const_scope_2.diag.txt  const_scope_3.diag.txt  const_scope_4.diag.txt  const_scope_5.diag.txt  delete_base.diag.txt  div64_by_minus_one_opt.diag.txt  div64_by_minus_one_opt.nut  div64_by_minus_one_vm.diag.txt  div64_by_minus_one_vm.nut  float_overflow.diag.txt  float_underflow.diag.txt  hex_overflow.diag.txt  integer_overflow.diag.txt  integer_overflow_int_max.diag.txt  invalid_float_1.diag.txt  invalid_float_2.diag.txt  invalid_float_3.diag.txt  invalid_string_interp_2.diag.txt  invalid_string_interp_2.nut  leading_zero_1.diag.txt  (+13 more)
testData/diagostics/: letAssign.diag.txt
testData/spec/: classInher.nut  enums.nut  ifstmt.nut  trystmt.nut
testData/static_analyser/: 200_nullc.diag.txt  forloop_merge.diag.txt  logic_ops_paren.diag.txt  logic_ops_paren.nut  loop_state.diag.txt  w200.diag.txt  w200_arith.diag.txt  w200_arith_deep.diag.txt  w200_arith_plus_eq.diag.txt  w200_special_func_name.diag.txt  w203.diag.txt  w204.diag.txt  w205-2.diag.txt  w205.diag.txt  w206.diag.txt  w208.diag.txt  w208_rec.diag.txt  w209.diag.txt  w210.diag.txt  w210_complex.diag.txt  w210_deep.diag.txt  w210_def.diag.txt  w210_nullc.diag.txt  w211.diag.txt  w212.diag.txt  w213.diag.txt  w214.diag.txt  w215.diag.txt  w215_nullc.diag.txt  w216.diag.txt  w217_break.diag.txt  w217_complex.diag.txt  w217_continue.diag.txt  w217_ret.diag.txt  w217_throw.diag.txt  w220.diag.txt  w220_deep.diag.txt  w221.diag.txt  w222.diag.txt  w222_deep.diag.txt  (+88 more)
tests/: minctest.nut
(+77 files in other folders)
